# PyVer

./: PyVer.opam  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: META.py_verinfer  py_verinfer.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ast.ml  collect_annot.ml  pycaml.ml-gen  util.ml
_build/default/lib/.merlin-conf/: lib-py_verinfer.pycaml
_build/default/lib/.pycaml.objs/: ast2string.ml.d  json2ast.ml.d  pycaml__Ast2string.impl.all-deps  pycaml__Json2ast.impl.all-deps  util.ml.d
_build/default/lib/.pycaml.objs/byte/: pycaml.cmi  pycaml.cmo  pycaml.cmt  pycaml__Ast.cmi  pycaml__Ast.cmo  pycaml__Ast.cmt  pycaml__Ast2string.cmi  pycaml__Ast2string.cmo  pycaml__Ast2string.cmt  pycaml__Json2ast.cmi  pycaml__Json2ast.cmo  pycaml__Json2ast.cmt  pycaml__Util.cmi  pycaml__Util.cmo  pycaml__Util.cmt
_build/default/lib/.pycaml.objs/native/: pycaml.cmx  pycaml__Ast.cmx  pycaml__Ast2string.cmx  pycaml__Json2ast.cmx  pycaml__Util.cmx
_build/default/pycaml/: ast2string.ml  json2ast.ml  pycaml.cma  pycaml.cmxa  pycaml.cmxs  pycaml.ml-gen
_build/default/pycaml/.merlin-conf/: lib-py_verinfer.pycaml
_build/default/pycaml/.pycaml.objs/: ast.ml.d  ast2string.ml.d  json2ast.ml.d  util.ml.d
_build/default/pycaml/.pycaml.objs/byte/: pycaml.cmi  pycaml.cmo  pycaml.cmt  pycaml__Ast.cmi  pycaml__Ast.cmo  pycaml__Ast.cmt  pycaml__Ast2string.cmi  pycaml__Ast2string.cmo  pycaml__Util.cmi  (+6 more)
_build/default/test/.merlin-conf/: exe-py_infer
lib/: ast.ml  ast2json.py  collect_annot.ml  dune  test.py
test/: dune
(+39 files in other folders)
